:bug: Fix shifted hover color on sm links

--- a/components/text-reveal/styles.module.scss
+++ b/components/text-reveal/styles.module.scss
@@ -12,4 +12,7 @@
   &Hidden {
     background-position: 0 0;
   }
+  a:hover {
+    color: transparent !important;
+  }
 }
